tests/syntax_errors/test41_2.tl
require "ifj21"
*sdjh
